gc/g1/TestLargePageUseForAuxMemory.java fails due to not considering page allocation granularity for setup

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 9
    • Affects Version/s: 8, 9
    • Component/s: hotspot
    • gc
    • b72

        test gc/g1/TestLargePageUseForAuxMemory.java,
        of the windows_x64_6.2-fastdebug-c2-hotspot_gc set,
        is failing after merging jdk9/hs with jdk9/dev:

        stderr: [java version "1.9.0-internal-fastdebug"
        Java(TM) SE Runtime Environment (build 1.9.0-internal-fastdebug-20150501110205.amurillo.jdk9-hs-2015-04--b00)
        Java HotSpot(TM) 64-Bit Server VM (build 1.9.0-internal-20150501110205.amurillo.jdk9-hs-2015-04--b00, mixed mode)
        ]
         exitValue = 0

        java.lang.RuntimeException: 'G1 'Block offset table': pg_sz=4096' missing from stdout/stderr

        at com.oracle.java.testlibrary.OutputAnalyzer.shouldContain(OutputAnalyzer.java:134)
        at TestLargePageUseForAuxMemory.checkSmallTables(TestLargePageUseForAuxMemory.java:46)
        at TestLargePageUseForAuxMemory.testVM(TestLargePageUseForAuxMemory.java:69)
        at TestLargePageUseForAuxMemory.main(TestLargePageUseForAuxMemory.java:116)
        at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
        at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.lang.reflect.Method.invoke(Method.java:502)
        at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:92)
        at java.lang.Thread.run(Thread.java:745)

        JavaTest Message: Test threw exception: java.lang.RuntimeException: 'G1 'Block offset table': pg_sz=4096' missing from stdout/stderr

          There are no Sub-Tasks for this issue.

              Assignee:
              Thomas Schatzl
              Reporter:
              Alejandro Murillo
              Votes:
              0 Vote for this issue
              Watchers:
              11 Start watching this issue

                Created:
                Updated:
                Resolved: