8079208: gc/g1/TestLargePageUseForAuxMemory.java fails due to not considering page allocation granularity for setup

The test case needs to use the OS'es allocation granularity to properly determine the boundary values for the test.

Reviewed-by: dfazunen, jmasa, ecaspole